# schemish

./: README.md  schemish.cabal  stdlib.scm  stream.scm
app/: Main.hs
src/: Env.hs  Eval.hs  IOFunc.hs  Lib.hs  Parser.hs  PrimitiveFunc.hs  SpecialForm.hs  Types.hs
