name:                schemish
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/cheng81/schemish#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Zanitti
maintainer:          fzanitti@gmail.com
copyright:           2016 Francesco Zanitti
category:            PLtest
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      ,Types
                      ,Parser
                      ,Eval
                      ,Env
                      ,PrimitiveFunc
                      ,IOFunc
                      ,SpecialForm
  build-depends:       base >= 4.7 && < 5
                      ,parsec
                      ,lens
                      ,mtl
                      ,either
  default-language:    Haskell2010

executable schemish-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , schemish
  default-language:    Haskell2010

test-suite schemish-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , schemish
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cheng81/schemish
